syntax = "proto3";

option java_package = "fulfillment";
option java_multiple_files = true;

service Fulfillment {
  rpc RegisterDeliveryPartner (RegisterDeliveryPartnerRequest) returns (DeliveryPartnerResponse) {}
  rpc GetNearestDeliveryPartner (Location) returns (NearestDeliveryPartnerResponse) {}
  rpc UpdateDeliveryStatus (DeliveryStatus) returns (DeliveryResponse){}
}

message Location{
  float xCordinate = 1;
  float yCordinate = 2;
}

message RegisterDeliveryPartnerRequest{
  string username = 1;
  string password = 2;
  Location location = 3;
  string availability = 4;
}

message DeliveryPartnerResponse{
  int64 id = 1;
  string username = 2;
  Location location = 3;
  string availability = 4;
}

message NearestDeliveryPartnerResponse{
  int64 id = 1;
  string username = 2;
}

message DeliveryStatus {
  string status = 1;
}

message DeliveryResponse {
  string deliveryResponse = 1;
}
